[gd_scene load_steps=5 format=3 uid="uid://dvtxo4w6mlmk8"]

[ext_resource type="Script" uid="uid://cb7ytkjmp47ln" path="res://scenes/ui/toolbar/vertical_toolbar.gd" id="1_bq7ig"]
[ext_resource type="Texture2D" uid="uid://b6dcvucrl3v8" path="res://assets/ui/icon/fleet_icon1.png" id="2_bq7ig"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ipaih"]
bg_color = Color(0.212305, 0.212305, 0.212305, 1)
corner_radius_top_right = 10
corner_radius_bottom_right = 10
expand_margin_right = 1.0

[sub_resource type="FontVariation" id="FontVariation_cxj0y"]
spacing_glyph = 1
baseline_offset = 0.1

[node name="VerticalToolbar" type="Control"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 3
anchor_right = 0.067
anchor_bottom = 0.613
offset_right = -0.639999
offset_bottom = -0.0400391
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 3
script = ExtResource("1_bq7ig")

[node name="Background" type="Panel" parent="."]
texture_filter = 5
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_right = 256.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ipaih")

[node name="ToolContainer" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 8.0
offset_right = 256.0
theme_override_constants/separation = 8

[node name="ToolButtonContainer" type="VBoxContainer" parent="Background/ToolContainer"]
custom_minimum_size = Vector2(48, 64)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 10

[node name="FleetTool" type="TextureButton" parent="Background/ToolContainer/ToolButtonContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("2_bq7ig")
ignore_texture_size = true
stretch_mode = 5

[node name="ToolLabelContainer" type="VBoxContainer" parent="Background/ToolContainer"]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Background/ToolContainer/ToolLabelContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = SubResource("FontVariation_cxj0y")
theme_override_font_sizes/font_size = 16
text = " 舰队工具6"
vertical_alignment = 1
